--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pantry-hero",
   "version": "1.0.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "start": "npm-run-all --parallel spa",
     "build": "react-scripts build",
@@ -18,7 +19,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
     "helmet": "^3.18.0",
