--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.11.0",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
     "helmet": "^3.18.0",
@@ -28,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
     "reactstrap": "^8.0.0"
