--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
