--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "helmet": "^3.18.0",
     "highlight.js": "^10.0.3",
     "jwks-rsa": "^1.4.0",
+    "material-icons": "^0.3.1",
+    "material-table": "^1.69.0",
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
@@ -33,7 +35,9 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
     "reactstrap": "^8.0.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "tubular-react": "^4.2.5",
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
