--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.0.0",
