--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
+    "@aws-amplify/ui-react": "^2.8.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.31",
+    "aws-amplify": "^4.3.15",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
     "helmet": "^3.18.0",
